# eleet_camel

./: .gitignore  .ocamlformat  README.md  degree.ml  dune-project  eleet_camel.opam
.github/workflows/: execute.yml  test.yml
.github/workflows/scripts/: report.bash
lib/: add_two.ml  bal_parens.ml  circular_sentences.ml  degree.ml  dune  house_robber.ml  prefix_tree.ml  rpn.ml  spiral.ml  two_sum.ml  word_search.ml
lib/collections/: deq.ml  deq.mli  dune
lib/stdplus/: dune  infix.ml  list.ml  list.mli  lists.ml  lists.mli  matrix.ml  matrix.mli
solutions/: add_two.ml  bal_parens.ml  caliberation.ml  circular_sentences.ml  degree.ml  dune  house_robber.ml  plus_one.ml  prefix_tree.ml  rpn.ml  spiral.ml  stocks.ml  two_sum.ml  word_search.ml
stdplus/: cell.ml  cell.mli  infix.ml  list.ml  matrix.ml  matrix.mli  option.ml  seq.ml  seq.mli
test/: dune
tests/: 1.txt  1000.txt  121.txt  130.txt  150.txt  198.txt  2.txt  20.txt  208.txt  2490.txt  54.txt  66.txt  697.txt  79.txt  transorm.py
tests/1/: expected.txt  tests.txt
tests/150/: expected.txt  tests.txt
tests/198/: expected.txt  tests.txt
tests/2/: expected.txt  tests.txt
tests/20/: expected.txt  tests.txt
tests/208/: expected.txt  tests.txt
tests/2490/: expected.txt  tests.txt
tests/697/: expected.txt  tests.txt
tests/79/: expected.txt  tests.txt
